# EIE2-Lab2-SigGen

./: .gitignore
task1/: counter.sv  divcounter.sv  doit.sh  rom.sv  sinegen.sv  sinegen_tb.cpp
task2/: counter.sv  divcounter.sv  doit.sh  rom.sv  sinegen.sv  sinegen_tb.cpp
task3/: CMakeLists.txt  counter.sv  dpram.sv  sigdelay.sv  sigdelay_tb.cpp
